--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-*.json
+# Bytecode and cache
+__pycache__/
+*.py[cod]
+
+# Virtual environments
+venv/
+env/
+
+# SQLite DBs and backups
+*.db
+
+# Secrets and API keys
 .env
+.secrets/
+.streamlit/secrets.toml
+
+# Snapshot and temp files
+project_snapshot.txt
+temp_*.txt
+*.bak
+
+# VS Code
+.vscode/
